# bt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
data/: dex_top100_2026-06-21.json
docs/: ACADEMIC_ROADMAP.md  ARCHITECTURE.md  BASKET_POLICY.md  DECENTRALIZED_MARKET_CORRECTNESS.md  DEX_RESEARCH.md  FORMAL_SPEC.md  INTEGER_TRANSACTIONS.md  PLS_READINESS.md  PULSE_READINESS.md  SOVEREIGN_DISTRIBUTION.md  app.js  index.html  styles.css
scripts/: build_dex_research.py  make_source_bundle.py
src/bt/: __init__.py  actors.py  basket.py  canonical.py  chains.py  cli.py  keys.py  market.py  models.py  money.py  orderbook.py  p2p.py  readiness.py  settlement.py  transactions.py  trust.py
src/eurbt/: __init__.py  actors.py  basket.py  canonical.py  cli.py  market.py  models.py  money.py  orderbook.py  p2p.py  settlement.py  trust.py
tests/: conftest.py  test_basket.py  test_invariants.py  test_market.py  test_models.py  test_money.py  test_orderbook.py  test_p2p.py  test_pls_readiness.py  test_pulse_readiness.py  test_signatures.py  test_transactions.py  test_trust.py
