[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eurbt"
version = "0.1.0"
description = "A Python-first trusted, serverless-leaning P2P DEX prototype for euro crypto markets."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Knitweb" }]
dependencies = [
  "cryptography>=42",
]

[project.scripts]
eurbt = "eurbt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

