[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bt"
version = "0.1.0"
description = "A Python-first trusted, serverless-leaning P2P DEX and knowledge-weighted basket prototype."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Knitweb" }]
dependencies = [
  "cryptography>=48.0.1",
]

[project.scripts]
bt = "bt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
